<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_guideline_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/black2"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="10dp"
            android:fontFamily="@font/asap_medium"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/photo_guidelines"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="10dp"
            android:fontFamily="@font/asap_medium"
            android:padding="5dp"
            android:text="@string/make_sure_it_s_your_photo"
            android:textColor="@color/outline_grey"
            android:textSize="15sp"
            app:drawableLeftCompat="@drawable/ic_baseline_check_circle_24"
            app:drawableTint="@color/purple_700" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="10dp"
            android:fontFamily="@font/asap_medium"
            android:padding="5dp"
            android:text="@string/be_happy_in_your_photo"
            android:textColor="@color/outline_grey"
            android:textSize="15sp"
            app:drawableLeftCompat="@drawable/ic_baseline_check_circle_24"
            app:drawableTint="@color/purple_700" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="10dp"
            android:fontFamily="@font/asap_medium"
            android:padding="5dp"
            android:text="@string/photo_should_not_be_blur"
            android:textColor="@color/outline_grey"
            android:textSize="15sp"
            app:drawableLeftCompat="@drawable/ic_baseline_check_circle_24"
            app:drawableTint="@color/purple_700" />

    </LinearLayout>
</androidx.cardview.widget.CardView>